<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Set Off-Limit Time"
        android:id="@+id/off_limit_time_text"
        android:textSize="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Start Time: "
        android:id="@+id/start_time_text"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/off_limit_time_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="End Time: "
        android:id="@+id/end_time_text"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/start_time_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Repeats daily"
        android:id="@+id/repeat_text"
        android:layout_below="@+id/end_time_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="48dp"
        android:layout_marginLeft="10dp"
        android:textSize="20dp"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:id="@+id/starttime"
        android:layout_alignBottom="@+id/start_time_text"
        android:onClick="showTimePicker1"
        android:focusable="false"
        android:background="@color/pink1"
        android:layout_toRightOf="@+id/start_time_text"
        android:layout_toEndOf="@+id/start_time_text" />

    <EditText
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:id="@+id/endtime"
        android:layout_above="@+id/repeat_text"
        android:layout_alignLeft="@+id/starttime"
        android:layout_alignStart="@+id/starttime"
        android:layout_alignRight="@+id/starttime"
        android:layout_alignEnd="@+id/starttime"
        android:background="@color/pink1"
        android:onClick="showTimePicker2"
        android:focusable="false" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Set"
        android:id="@+id/set_button"
        android:textColor="@color/black"
        android:background="#f2e1f4"
        android:clickable="true"
        android:onClick="setOffLimit"
        android:layout_weight="1"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Cancel"
        android:id="@+id/cancel_button"
        android:textColor="@color/black"
        android:background="#f2e1f4"
        android:clickable="true"
        android:onClick="closePopUp"
        android:layout_alignTop="@+id/set_button"
        android:layout_toRightOf="@+id/set_button"
        android:layout_weight="1"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/current_offlimit_text"
        android:text="Current Off-Limit Time:"
        android:layout_below="@+id/repeat_text"
        android:layout_marginLeft="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="18dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/current_offlimit_time"
        android:background="#00000000"
        android:layout_toRightOf="@+id/current_offlimit_text"
        android:layout_below="@+id/repeat_text"
        android:editable="false"
        android:focusable="false" />


</RelativeLayout>