<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="15dp"
    android:paddingBottom="0dp"
    tools:context=".Taskscreen"
    android:outlineProvider="paddedBounds"
    android:visibility="visible"
    android:transitionGroup="false"
    android:touchscreenBlocksFocus="false"
    android:background="#ffffff"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Task Name"
        android:id="@+id/textView"
        android:textColor="#000000"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/task_name_message"
        android:layout_alignEnd="@+id/task_name_message"
        android:textStyle="bold"
        android:textSize="@dimen/popup_font_size"/>


    <EditText android:id= "@+id/task_name_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:editable="true"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Task Description"
        android:id="@+id/textView2"
        android:layout_below="@+id/task_name_message"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="@dimen/popup_font_size"
        android:textColor="#000000" />


    <EditText
        android:id= "@+id/description_name_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:editable="true"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Duration (in hours)"
        android:layout_below="@+id/description_name_message"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView3"
        android:textStyle="bold"
        android:textSize="@dimen/popup_font_size"
        android:layout_marginTop="10dp"
        android:textColor="#000000" />


    <EditText
        style= "@style/Numbers"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:id="@+id/duration_time"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Due Date"
        android:id="@+id/duedate_message"
        android:layout_below="@+id/duration_time"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="@dimen/popup_font_size"
        android:textColor="#000000" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/duedate"
        android:onClick="showCalendar"
        android:focusable="false"
        android:focusableInTouchMode="true"
        android:layout_below="@+id/duedate_message"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Due Time"
        android:id="@+id/duetime_message"
        android:layout_below="@+id/duedate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:textSize="@dimen/popup_font_size"
        android:layout_marginTop="10dp"
        android:textColor="#000000" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/duetime_hour"
        android:focusable="false"
        android:onClick="showTimePicker"
        android:layout_below="@+id/duetime_message"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Done"
        android:id="@+id/doneButton"
        android:clickable="true"
        android:onClick="addTask"
        android:background="#000000"
        android:textColor="@color/white"
        android:layout_alignTop="@+id/cancelButton"
        android:layout_toRightOf="@+id/priority"
        android:layout_toEndOf="@+id/priority"
        android:layout_marginBottom="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cancel"
        android:id="@+id/cancelButton"
        android:onClick="hidePopup"
        android:background="#000000"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/duetime_hour"
        android:layout_toEndOf="@+id/duetime_hour"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Priority "
        android:id="@+id/priority"
        android:textStyle="bold"
        android:textSize="@dimen/popup_font_size"
        android:layout_below="@+id/duetime_hour"
        android:layout_marginTop="12dp"
        android:textColor="#000000" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:background="#d699f0"
        android:entries="@array/priorities"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/priority"
        android:layout_alignLeft="@+id/duration_time"
        android:layout_alignStart="@+id/duration_time"
        android:spinnerMode="dropdown" />

</RelativeLayout>