...
    android:background="#ffffff">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Generate"
        android:id="@+id/generate_button"
        android:layout_gravity="right"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="38dp"
        android:background="#000000"
        android:textColor="@color/white"
...
